removed code IDing versions of imported libraries
...and the code IDing which version of Python I'm using

--- a/Monument_Finder.ipynb
+++ b/Monument_Finder.ipynb
@@ -19,20 +19,12 @@
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "import shapely\n",
     "from shapely.geometry import Point\n",
     "pd.set_option('display.max_colwidth', 175)\n",
     "import folium\n",
-    "import BackgroundFunctions as bf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef28a405",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#help(monument_finder)"
+    "import BackgroundFunctions as bf\n",
+    "#from BackgroundFunctions import monument_finder"
    ]
   },
   {
@@ -77,7 +69,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_6f3e53998e8216a937e03ad7a9031598 {\n",
+       "                #map_f962efaa70ab477837c98e4472dd6479 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -89,13 +81,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_6f3e53998e8216a937e03ad7a9031598&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_f962efaa70ab477837c98e4472dd6479&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_6f3e53998e8216a937e03ad7a9031598 = L.map(\n",
-       "                &quot;map_6f3e53998e8216a937e03ad7a9031598&quot;,\n",
+       "            var map_f962efaa70ab477837c98e4472dd6479 = L.map(\n",
+       "                &quot;map_f962efaa70ab477837c98e4472dd6479&quot;,\n",
        "                {\n",
        "                    center: [52.4776, 1.8944],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -109,102 +101,132 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_70613a9987603af8ce1d1a55c84be151 = L.tileLayer(\n",
+       "            var tile_layer_6238f67b6e1a65d2ca7346bb5d242058 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
+       "            ).addTo(map_f962efaa70ab477837c98e4472dd6479);\n",
        "        \n",
        "    \n",
-       "            var marker_7ff2ae53e7739b27308ff12027b0318f = L.marker(\n",
-       "                [54.97374895267365, -1.607838597220768],\n",
+       "            var marker_8a640c43580c2f691339b41fd4f81f7a = L.marker(\n",
+       "                [51.53368935600225, -0.04900468860930748],\n",
        "                {}\n",
-       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
+       "            ).addTo(map_f962efaa70ab477837c98e4472dd6479);\n",
        "        \n",
        "    \n",
-       "        var popup_cb78ebd3cac064f028ea02d5cda7080b = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "            var icon_014cd809f0e4526e4b40c39b898583c7 = L.AwesomeMarkers.icon(\n",
+       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;red&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
+       "            );\n",
+       "            marker_8a640c43580c2f691339b41fd4f81f7a.setIcon(icon_014cd809f0e4526e4b40c39b898583c7);\n",
+       "        \n",
+       "    \n",
+       "        var popup_0685de89a6f384cf43fca6b1ac78e697 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_38e066db12f7102a1b48a6fcc9ddb4c5 = $(`&lt;div id=&quot;html_38e066db12f7102a1b48a6fcc9ddb4c5&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including Plummer Tower and a 17th century bastion&lt;/div&gt;`)[0];\n",
-       "            popup_cb78ebd3cac064f028ea02d5cda7080b.setContent(html_38e066db12f7102a1b48a6fcc9ddb4c5);\n",
+       "            var html_2f10f8d1dfb51990cfe5a708802b19e9 = $(`&lt;div id=&quot;html_2f10f8d1dfb51990cfe5a708802b19e9&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Bonner Hall Bridge, Regent&#x27;s Canal&lt;/div&gt;`)[0];\n",
+       "            popup_0685de89a6f384cf43fca6b1ac78e697.setContent(html_2f10f8d1dfb51990cfe5a708802b19e9);\n",
        "        \n",
        "\n",
-       "        marker_7ff2ae53e7739b27308ff12027b0318f.bindPopup(popup_cb78ebd3cac064f028ea02d5cda7080b)\n",
+       "        marker_8a640c43580c2f691339b41fd4f81f7a.bindPopup(popup_0685de89a6f384cf43fca6b1ac78e697)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_041e46ded191168904ca0db0ed628ed0 = L.marker(\n",
-       "                [54.97376333006797, -1.618704462426388],\n",
+       "            var marker_09e4f07b080267afcafa11a3ee245435 = L.marker(\n",
+       "                [51.53825424092876, -0.029405983823285776],\n",
        "                {}\n",
-       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
+       "            ).addTo(map_f962efaa70ab477837c98e4472dd6479);\n",
        "        \n",
        "    \n",
-       "        var popup_131f52aaff524dcae02c8a7303e90a63 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "            var icon_7687bfaee64e07d1666d5f9e3c7b8e7e = L.AwesomeMarkers.icon(\n",
+       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;red&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
+       "            );\n",
+       "            marker_09e4f07b080267afcafa11a3ee245435.setIcon(icon_7687bfaee64e07d1666d5f9e3c7b8e7e);\n",
+       "        \n",
+       "    \n",
+       "        var popup_04ee65609fc21b8cbbcfe1c87e11f738 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_3b3b83cdb5c3e0d2d2b8098023f58df7 = $(`&lt;div id=&quot;html_3b3b83cdb5c3e0d2d2b8098023f58df7&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall including St Andrew&#x27;s Tower and section of town ditch&lt;/div&gt;`)[0];\n",
-       "            popup_131f52aaff524dcae02c8a7303e90a63.setContent(html_3b3b83cdb5c3e0d2d2b8098023f58df7);\n",
+       "            var html_d95078fdcf0af23821cf46bb54dbacad = $(`&lt;div id=&quot;html_d95078fdcf0af23821cf46bb54dbacad&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Parnell Road Bridge&lt;/div&gt;`)[0];\n",
+       "            popup_04ee65609fc21b8cbbcfe1c87e11f738.setContent(html_d95078fdcf0af23821cf46bb54dbacad);\n",
        "        \n",
        "\n",
-       "        marker_041e46ded191168904ca0db0ed628ed0.bindPopup(popup_131f52aaff524dcae02c8a7303e90a63)\n",
+       "        marker_09e4f07b080267afcafa11a3ee245435.bindPopup(popup_04ee65609fc21b8cbbcfe1c87e11f738)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_18f36ff76948e8f513ff8ee666334452 = L.marker(\n",
-       "                [54.96889147128266, -1.6100492837164126],\n",
+       "            var marker_f91bab6cd2f5b7cd4842084ced5dd057 = L.marker(\n",
+       "                [51.5359332721744, -0.03420482754509535],\n",
        "                {}\n",
-       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
+       "            ).addTo(map_f962efaa70ab477837c98e4472dd6479);\n",
        "        \n",
        "    \n",
-       "        var popup_6451b2738f658b283e6f5cee15fab169 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "            var icon_9b89434b51d8f7b4f9ffe7f47d957d84 = L.AwesomeMarkers.icon(\n",
+       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;red&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
+       "            );\n",
+       "            marker_f91bab6cd2f5b7cd4842084ced5dd057.setIcon(icon_9b89434b51d8f7b4f9ffe7f47d957d84);\n",
+       "        \n",
+       "    \n",
+       "        var popup_a497a4c56f957aae0b132d55aebb8da0 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_85e4127938c8f2fd9d4b1352bc0854cd = $(`&lt;div id=&quot;html_85e4127938c8f2fd9d4b1352bc0854cd&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Roman fort, Anglo-Saxon cemetery, motte and bailey castle and tower keep castle&lt;/div&gt;`)[0];\n",
-       "            popup_6451b2738f658b283e6f5cee15fab169.setContent(html_85e4127938c8f2fd9d4b1352bc0854cd);\n",
+       "            var html_f224f278e4cfd72b052841abe32ded56 = $(`&lt;div id=&quot;html_f224f278e4cfd72b052841abe32ded56&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Three Colt Bridge, Gunmaker&#x27;s Lane&lt;/div&gt;`)[0];\n",
+       "            popup_a497a4c56f957aae0b132d55aebb8da0.setContent(html_f224f278e4cfd72b052841abe32ded56);\n",
        "        \n",
        "\n",
-       "        marker_18f36ff76948e8f513ff8ee666334452.bindPopup(popup_6451b2738f658b283e6f5cee15fab169)\n",
+       "        marker_f91bab6cd2f5b7cd4842084ced5dd057.bindPopup(popup_a497a4c56f957aae0b132d55aebb8da0)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_0f467f237f8b9a7d9ed4aa29a777ae96 = L.marker(\n",
-       "                [54.97132891441838, -1.6060170244804164],\n",
+       "            var marker_879d0d3ed545d28f6c04c720e4a1f948 = L.marker(\n",
+       "                [51.52468863545367, -0.07971736441629268],\n",
        "                {}\n",
-       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
+       "            ).addTo(map_f962efaa70ab477837c98e4472dd6479);\n",
        "        \n",
        "    \n",
-       "        var popup_21fa9f20338ab73e036033a9e0152ee6 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "            var icon_a91d672a604133c42ae3c64dd704c9fe = L.AwesomeMarkers.icon(\n",
+       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;red&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
+       "            );\n",
+       "            marker_879d0d3ed545d28f6c04c720e4a1f948.setIcon(icon_a91d672a604133c42ae3c64dd704c9fe);\n",
+       "        \n",
+       "    \n",
+       "        var popup_1be68cffb96fc6f75006ffa32daf3165 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_45fc18e2f37367bf066c8e14d46d8314 = $(`&lt;div id=&quot;html_45fc18e2f37367bf066c8e14d46d8314&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Newcastle upon Tyne town defences: section of curtain wall containing Corner Tower&lt;/div&gt;`)[0];\n",
-       "            popup_21fa9f20338ab73e036033a9e0152ee6.setContent(html_45fc18e2f37367bf066c8e14d46d8314);\n",
+       "            var html_f9b32146f7ad2299cd12c7077a694f3f = $(`&lt;div id=&quot;html_f9b32146f7ad2299cd12c7077a694f3f&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;The Theatre Playhouse&lt;/div&gt;`)[0];\n",
+       "            popup_1be68cffb96fc6f75006ffa32daf3165.setContent(html_f9b32146f7ad2299cd12c7077a694f3f);\n",
        "        \n",
        "\n",
-       "        marker_0f467f237f8b9a7d9ed4aa29a777ae96.bindPopup(popup_21fa9f20338ab73e036033a9e0152ee6)\n",
+       "        marker_879d0d3ed545d28f6c04c720e4a1f948.bindPopup(popup_1be68cffb96fc6f75006ffa32daf3165)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_6bb1554c6a8beeff5f31b6f35b6452e2 = L.marker(\n",
-       "                [54.972002755531214, -1.6196308965136506],\n",
+       "            var marker_f01356f60614eacf83263f8e128333da = L.marker(\n",
+       "                [51.52285566245207, -0.08034187175923774],\n",
        "                {}\n",
-       "            ).addTo(map_6f3e53998e8216a937e03ad7a9031598);\n",
+       "            ).addTo(map_f962efaa70ab477837c98e4472dd6479);\n",
        "        \n",
        "    \n",
-       "        var popup_e87ea4a19fe557f75191bffbb35585a8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "            var icon_3d1b3601c928d1d6db9169438b80e440 = L.AwesomeMarkers.icon(\n",
+       "                {&quot;extraClasses&quot;: &quot;fa-rotate-0&quot;, &quot;icon&quot;: &quot;info-sign&quot;, &quot;iconColor&quot;: &quot;white&quot;, &quot;markerColor&quot;: &quot;red&quot;, &quot;prefix&quot;: &quot;glyphicon&quot;}\n",
+       "            );\n",
+       "            marker_f01356f60614eacf83263f8e128333da.setIcon(icon_3d1b3601c928d1d6db9169438b80e440);\n",
+       "        \n",
+       "    \n",
+       "        var popup_b5394dd9978e59ec75d0edd589d1bc5f = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
-       "            var html_0279cc1bbc2f91e42d756f62c5384ca6 = $(`&lt;div id=&quot;html_0279cc1bbc2f91e42d756f62c5384ca6&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;The Friars, remains of Dominican friary&lt;/div&gt;`)[0];\n",
-       "            popup_e87ea4a19fe557f75191bffbb35585a8.setContent(html_0279cc1bbc2f91e42d756f62c5384ca6);\n",
+       "            var html_7e0292e837650b28e1dd121464bea79d = $(`&lt;div id=&quot;html_7e0292e837650b28e1dd121464bea79d&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;The Curtain Playhouse&lt;/div&gt;`)[0];\n",
+       "            popup_b5394dd9978e59ec75d0edd589d1bc5f.setContent(html_7e0292e837650b28e1dd121464bea79d);\n",
        "        \n",
        "\n",
-       "        marker_6bb1554c6a8beeff5f31b6f35b6452e2.bindPopup(popup_e87ea4a19fe557f75191bffbb35585a8)\n",
+       "        marker_f01356f60614eacf83263f8e128333da.bindPopup(popup_b5394dd9978e59ec75d0edd589d1bc5f)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -212,7 +234,7 @@
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1a8a1f1ac70>"
+       "<folium.folium.Map at 0x25e5695b160>"
       ]
      },
      "execution_count": 2,
@@ -221,14 +243,22 @@
     }
    ],
    "source": [
-    "pcode= 'NE1'\n",
+    "pcode= 'E5'\n",
     "bf.monument_finder_map(pcode)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e975693f",
+   "id": "3b6e0022",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d675e891",
    "metadata": {},
    "outputs": [],
    "source": []
